--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/logos/apple-touch-icon.png" />
     <link rel="manifest" href="/logos/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Derek Naing</title>
   </head>
   <body>
     <div id="root"></div>
