--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logos/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/logos/favicon.svg" />
-    <link rel="shortcut icon" href="/logos/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/logos/apple-touch-icon.png" />
-    <link rel="manifest" href="/logos/site.webmanifest" />
+    <link rel="icon" type="image/png" href="logos/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="logos/favicon.svg" />
+    <link rel="shortcut icon" href="logos/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="logos/apple-touch-icon.png" />
+    <link rel="manifest" href="logos/site.webmanifest" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Derek Naing</title>
   </head>
